Attempting to fix snow on mobiles.

--- a/css/global.css
+++ b/css/global.css
@@ -26,9 +26,10 @@ body div {
     overflow:   hidden;
 }
 canvas {
-    position: absolute;
+    left:     0;
+    position: fixed;
     top:      0;
-    z-index:  1;
+    z-index:  0;
 }
 .clear {
     clear: both;
